<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:layout_height="match_parent"
    tools:layout_width="match_parent"
    tools:parentTag="android.widget.ScrollView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/margin">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/applicationKeyEditText"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/margin">

                <TextView
                    style="@style/Text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/keys_application_key" />

                <EditText
                    android:id="@+id/applicationKeyEditText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="@dimen/margin_small"
                    android:background="@drawable/rounded_text_field_background"
                    android:elevation="1dp"
                    android:ellipsize="end"
                    android:inputType="text"
                    android:lines="1"
                    android:paddingStart="@dimen/margin_small"
                    android:paddingEnd="@dimen/margin_small"
                    android:singleLine="true" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            app:layout_constraintBottom_toBottomOf="@id/applicationKeyEditText"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/margin">

                <TextView
                    style="@style/Text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/custom_params_title_action" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/playlistTypeSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu" />

                    <EditText
                        android:id="@+id/playlistValueEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_small"
                        android:ellipsize="end"
                        android:hint="@string/custom_params_hint_player_action_value"
                        android:inputType="text"
                        android:lines="1"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/playlistRecordButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/margin_small"
                        android:text="@string/custom_params_record_query" />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            app:layout_constraintBottom_toBottomOf="@id/applicationKeyEditText"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/margin">

                <TextView
                    style="@style/Text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/custom_params_title_player_mode" />

                <RadioGroup
                    android:id="@+id/playerModeRadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/bannerRadioButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/custom_params_button_banner" />

                    <RadioButton
                        android:id="@+id/buttonRadioButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/custom_params_button_button" />
                </RadioGroup>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            app:layout_constraintBottom_toBottomOf="@id/applicationKeyEditText"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/margin">

                <TextView
                    style="@style/Text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/custom_params_title_player_theme" />

                <RadioGroup
                    android:id="@+id/playerThemeRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/darkModeRadioButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/custom_params_button_dark" />

                    <RadioButton
                        android:id="@+id/lightModeRadioButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/custom_params_button_light" />
                </RadioGroup>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            app:layout_constraintBottom_toBottomOf="@id/applicationKeyEditText"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/margin">

                <TextView
                    style="@style/Text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/custom_params_title_color_accent" />

                <EditText
                    android:id="@+id/colorAccentEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:ellipsize="end"
                    android:hint="@string/custom_params_hint_hex_value"
                    android:inputType="text"
                    android:lines="1"
                    android:textSize="16sp" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            app:layout_constraintBottom_toBottomOf="@id/applicationKeyEditText"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/switchContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/margin">

                <TextView
                    style="@style/Text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/custom_params_title_auto_play" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/autoplaySwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="false" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/reloadButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/margin"
            android:background="@drawable/rounded_button_background"
            android:fontFamily="@font/montserrat_semi_bold"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:text="@string/keys_reload_player"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="UnusedAttribute" />
    </LinearLayout>
</merge>