<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/mainWelcomeTextView"
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="4dp"
            android:text="@string/main_welcome_to"
            app:drawableEndCompat="@drawable/ic_logo_small_pink" />

        <TextView
            android:id="@+id/mainPlayerTextView"
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/main_player" />
    </LinearLayout>

    <com.audioburst.sdkdemo.custom_views.TabView
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/miniPlayer"
        android:layout_below="@id/tabLayout" />

    <LinearLayout
        android:id="@+id/recordingOverlayView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/recordingOverlayColor"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/mainRecordingTextView"
            style="@style/TextBig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_recording_overlay_text" />

        <Button
            android:id="@+id/stopRecordingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_big"
            android:text="@string/main_stop_recording" />
    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/miniPlayer"
        android:name="com.audioburst.audioburst_player.MiniPlayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />
</RelativeLayout>