<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:layout_height="match_parent"
    tools:layout_width="match_parent"
    tools:parentTag="android.widget.ScrollView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/margin">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            app:layout_constraintBottom_toBottomOf="@id/applicationKeyEditText"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/margin">

                <TextView
                    style="@style/Text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/playlist_configuration_toolbar_title" />

                <EditText
                    android:id="@+id/toolbarTitleEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:ellipsize="end"
                    android:hint="@string/playlist_configuration_provide_toolbar_title"
                    android:inputType="text"
                    android:lines="1"
                    android:textSize="16sp" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin">

            <LinearLayout
                android:id="@+id/switchContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/margin">

                <TextView
                    style="@style/Text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/playlist_configuration_show_toolbar" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/showToolbarSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="false" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin">

            <LinearLayout
                android:id="@+id/switchMyPlaylistContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/margin">

                <TextView
                    style="@style/Text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/playlist_configuration_show_my_playlists" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/showMyPlaylistSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="false" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin">

            <LinearLayout
                android:id="@+id/switchCloseOnLoadContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/margin">

                <TextView
                    style="@style/Text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/playlist_configuration_close_on_load" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/closeOnLoadSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="false" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/margin">

                <TextView
                    style="@style/Text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/playlist_configuration_title_section_type" />

                <RadioGroup
                    android:id="@+id/sectionTypeRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/horizontalRadioButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/playlist_configuration_section_type_horizontal" />

                    <RadioButton
                        android:id="@+id/gridRadioButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/playlist_configuration_section_type_grid" />
                </RadioGroup>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/showButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/margin"
            android:background="@drawable/rounded_button_background"
            android:fontFamily="@font/montserrat_semi_bold"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:text="@string/playlist_configuration_show_playlist_view"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="UnusedAttribute" />
    </LinearLayout>
</merge>