<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:layout_height="match_parent"
    tools:layout_width="match_parent"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

    <TextView
        android:id="@+id/mainApplicationKeyTextView"
        style="@style/Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/keys_application_key"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/applicationKeyEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin"
        android:background="@drawable/rounded_text_field_background"
        android:ellipsize="end"
        android:lines="1"
        android:paddingStart="@dimen/margin_small"
        android:paddingEnd="@dimen/margin_small"
        android:singleLine="true"
        app:layout_constraintStart_toStartOf="@id/mainApplicationKeyTextView"
        app:layout_constraintTop_toBottomOf="@id/mainApplicationKeyTextView" />

    <TextView
        android:id="@+id/mainSettingsIdTextView"
        style="@style/Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/keys_experience_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/applicationKeyEditText" />

    <EditText
        android:id="@+id/experienceIdEditView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin"
        android:background="@drawable/rounded_text_field_background"
        android:ellipsize="end"
        android:lines="1"
        android:paddingStart="@dimen/margin_small"
        android:paddingEnd="@dimen/margin_small"
        android:singleLine="true"
        app:layout_constraintStart_toStartOf="@id/mainSettingsIdTextView"
        app:layout_constraintTop_toBottomOf="@id/mainSettingsIdTextView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/reloadButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:background="@drawable/rounded_button_background"
        android:fontFamily="@font/montserrat_semi_bold"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:text="@string/keys_reload_player"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/experienceIdEditView"
        tools:ignore="UnusedAttribute" />
</merge>